fix label alignment

--- a/src/index.css
+++ b/src/index.css
@@ -421,6 +421,7 @@ input:focus::placeholder {
 }
 
 .label {
+  align-items: center;
   display: flex;
   gap: 0.25rem;
   flex: 1;
